--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,5 @@
 {
-  "extends": [
-    "@rocketseat/eslint-config/next"
-  ],
+  "extends": ["@rocketseat/eslint-config/next"],
   "plugins": ["simple-import-sort"],
   "rules": {
     "simple-import-sort/imports": "error"
